[gd_scene load_steps=3 format=3 uid="uid://7ywidi76q4ef"]

[ext_resource type="Script" path="res://scripts/pick_up.gd" id="1_6dx41"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8rkl3"]
height = 0.681657
radius = 0.969685

[node name="pick_up" type="Node3D"]
script = ExtResource("1_6dx41")

[node name="pickup_area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="pickup_area"]
shape = SubResource("CylinderShape3D_8rkl3")

[node name="pickup_label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="pickup_area" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="pickup_area" to="." method="_on_pickup_area_body_exited"]
